# spectroscopy-conversions

./: buildozer.spec  conversions.bat  pyproject.toml
spectroscopy-conversions/: conversion.kv  conversions.py  main.py
