[tool.poetry]
name = "spectroscopy-conversions"
version = "0.1.0"
description = ""
authors = ["Eoin Elliott"]

[tool.poetry.dependencies]
python = ">=3.6, <4.0"
Kivy = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true